# time-collector

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  mise.toml
.github/workflows/: c-cpp.yml
cmake/: Helpers.cmake
src/: Grammar.h  Time.cpp  Time.h  main.cpp  main.rs
test/: CMakeLists.txt  ResourcesList.cmake  Time.cpp
test/Time/: Time.cpp
