[package]
name = "time_collector"
version = "0.1.0"
edition = "2024"
links = "time_collector"
license = "MIT"

[package.metadata.zanbil]
cpp = 17
format_command = "clang-format -style=webkit -i"

[dependencies]
boost_fusion = "0.1.0"
boost_phoenix = "0.1.0"
boost_spirit = "0.1.0"
gtest_cpp = { version = "0.1.0", optional = true }

[build-dependencies]
zanbil-build = "0.1.0"

[features]
test = ["dep:gtest_cpp"]